--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.1.2",
     "firebase": "^9.15.0",
     "graphql": "^16.6.0",
+    "moment": "^2.29.4",
     "next": "13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
